--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>Item2</module>
+        <module>Item4</module>
     </modules>
 
     <properties>
