--- a/Item14/pom.xml
+++ b/Item14/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.hry</groupId>
+        <artifactId>effective-java-series</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.hry</groupId>
-    <artifactId>effective-java-series</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>Item2</module>
-        <module>Item4</module>
-        <module>Item6</module>
-        <module>Item7</module>
-        <module>Item3</module>
-        <module>Item14</module>
-    </modules>
+    <artifactId>Item14</artifactId>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
